--- a/index.html
+++ b/index.html
@@ -6,14 +6,73 @@
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2324</title>
+	<title>Apple.nl FED</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
-	<h1>Howdy FED2324</h1>
+	<header>
+			<nav>
+				<a href=""><img src="images/apple-logo-transparent.png" alt="Apple logo "></a>
+				<a href=""><img src="images/zoek-icon.png" alt="zoek icoon"></a>
+				<a href=""><img src="images/winkelmand.png" alt="winkelmandje"></a>
+				<a href=""><img src="images/hamburger-menu-5.png" alt="Hamburger menu icoon"></a>
+			</nav>
+			
+	</header>
+
+	<main>
+		<section>
+			<a href=""><img src="images/apple-Iphone-15-pro.png" alt="Apple Iphone 15 pro"></a>
+			<a href=""><img src="images/Iphone-15.png" alt="Iphone 15"></a>
+		</section>
+
+		<section>
+			<a href=""><img src="images/Apple-Watch-S9.png" alt="Apple watch series 9"></a>
+			<a href=""><img src="images/Apple-Store.png" alt="Het apple store shopping event"></a>
+		</section>
+
+		<section>
+			<a href=""><img src="images/Apple-Cadeau.png" alt=""></a>
+			<a href=""><img src="images/MacBookPro.png" alt=""></a>
+		</section>
+
+		<section>
+			<a href=""><img src="images/Apple-Ipad.png" alt=""></a>
+			<a href=""><img src="images/Apple-Watch-2.png" alt=""></a>
+			<a href=""><img src="images/Trade-In.png" alt=""></a>
+		</section>
+
+		<section>
+			<p>1. Deze actie is geldig voor in aanmerking komende aankopen van in aanmerking komende producten die 
+				van 24 november 2023 tot en met 27 november 2023 worden gedaan bij een in aanmerking komend verkooppunt. 
+				Deze actie is onder voorbehoud van beschikbaarheid en zolang de voorraad strekt. Bij in aanmerking komende 
+				aankopen kan je een korting ontvangen ter hoogte van de waarde van de in aanmerking komende Apple Gift Card 
+				op het in aanmerking komende product. Alle artikelen, inclusief de in aanmerking komende Apple Gift Card, 
+				moeten worden afgerekend. Deze actie kan bovendien niet worden gecombineerd met het Apple Employee Purchase 
+				Plan of speciale (loyaliteits)prijzen voor het onderwijs of bedrijven. Sommige betaalmethodes worden voor 
+				deze actie niet geaccepteerd. Meer informatie vind je bij het afrekenen. Daarnaast gelden er mogelijk nog 
+				andere beperkingen. De volledige op deze actie van toepassing zijnde voorwaarden vind je hier. </p>
+				<p> 2. De inruilwaarde is afhankelijk van de staat, het jaar en de configuratie van het device dat je inruilt. 
+				Je moet minimaal 18 jaar zijn om je device te mogen inruilen voor een tegoed of een Apple Gift Card. Niet 
+				alle devices komen in aanmerking voor een tegoed. Voor meer informatie over het inruilen van devices kun 
+				je terecht bij de inruilpartner van Apple. Mogelijk gelden er bepaalde beperkingen. Uitbetaling geschiedt 
+				op basis van het ontvangen device dat voldoet aan de omschrijving die je ten tijde van de waardebepaling hebt 
+				opgegeven. Apple behoudt zich het recht voor om, om welke reden dan ook, een device te weigeren of het aantal 
+				te beperken. De waarde van je huidige device kan in mindering worden gebracht op de aanschafprijs van een nieuw 
+				Apple device. Het aanbod is mogelijk niet in alle Stores beschikbaar. In sommige Stores kunnen extra eisen gelden. 
+				Op dit moment is het inruilen van een desktopcomputer alleen online mogelijk. Voor Apple TV+ is een abonnement vereist.</p>
+		</section>
+
+	
+
+
+	</main>
+	<footer>
+		<p></p>
+	</footer>
 
 	<script defer src="scripts/script.js"></script>
 </body>
