--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	<header>
 			<nav>
 				<h1 aria-label="Welkom bij Apple">
-					<a href=""><img src="images/apple-logo-transparent.png" alt=""></a>
+					<a href=""><img src="images/apple-logo-svgrepo-com.svg" alt=""></a>
 				</h1>
-					<button aria-hidden="false"><img src="images/zoek-icon.png" alt="zoek icoon"></button>
-					<button aria-hidden="false"><img src="images/winkelmand.png" alt="winkelmand"></button>
-					<button aria-hidden="true"><img src="images/hamburger-menu-5.png" alt=""></button>
+					<button aria-hidden="false"><img src="images/search-svgrepo-com.svg" alt="zoek icoon"></button>
+					<button aria-hidden="false"><img src="images/shopping-bag-svgrepo-com.svg" alt="winkelmand"></button>
+					<button aria-hidden="true"><img src="images/hamburger-menu-svgrepo-com.svg" alt=""></button>
 					<ul>
 						<li>
 							<a href="">Store</a>
@@ -59,8 +59,8 @@
 	</header>
 
 	<main>
-		<section>
-			<a href=""><img src="images/apple-Iphone-15-pro.png" alt="Apple Iphone 15 pro"></a>
+		<section class="section1">
+			<a href=""><img src="images/apple-Iphone-15-pro.png" alt="Apple Iphone 15 pro"><button>Hello</button></a>
 			<a href=""><img src="images/Iphone-15.png" alt="Iphone 15"></a>	
 			<a href=""><img src="images/Watch-V2.png" alt="Apple watch series 9"></a>
 			<a href=""><img src="images/Apple-Store.png" alt="Het apple store shopping event"></a>
@@ -69,6 +69,37 @@
 			<a href=""><img src="images/Apple-Ipad.png" alt=""></a>
 			<a href=""><img src="images/Apple-Watch-2.png" alt=""></a>
 			<a href=""><img src="images/Trade-In.png" alt=""></a>
+		</section>
+
+		<section id="fotoSliderAuto" class="fotoSlider">
+			<ul>
+				<li id="element1"><img src="images/af1-napoleon.jpeg" alt="Napoleon de film Apple TV+"></li>
+				<li id="element2"><img src="images/af2-morningShow.jpg" alt="The morning show Apple TV+"></li>
+				<li id="element3"><img src="images/af3-tedLasso.jpg" alt="Ted Lasso Apple TV+"></li>
+				<li id="element4"><img src="images/af4-hijack.jpeg" alt="Idris Elba hijack Apple TV+"></li>
+				<li id="element5"><img src="images/af5-invasion.jpg" alt="Invasion apple TV+"></li>
+				<li id="element6"><img src="images/af6-silo.png" alt="Silo Apple TV+"></li>
+				<li id="element7"><img src="images/af7-fouindation.jpeg" alt="Foundation Apple TV+"></li>
+				<li id="element8"><img src="images/af8-argylle.jpeg" alt="Argylle de film Apple TV+"></li>
+				<li id="element9"><img src="images/af9-serverance.jpeg" alt="Serverance de film Apple TV+"></li>
+			</ul>
+
+			<nav>
+				<ul>
+				  <li><a href="#element1" aria-label="go to element1"></a></li>
+				  <li><a href="#element2" aria-label="go to element2"></a></li>
+				  <li><a href="#element3" aria-label="go to element3"></a></li>
+				  <li><a href="#element4" aria-label="go to element4"></a></li>
+				  <li><a href="#element5" aria-label="go to element5"></a></li>
+				  <li><a href="#element6" aria-label="go to element6"></a></li>
+				  <li><a href="#element7" aria-label="go to element7"></a></li>
+				  <li><a href="#element8" aria-label="go to element8"></a></li>
+				  <li><a href="#element9" aria-label="go to element9"></a></li>
+				</ul>
+			  </nav>
+
+			  <button aria-label="start/stop autoscroll"></button>
+
 		</section>
 
 		
@@ -90,6 +121,12 @@
 				Plan of speciale (loyaliteits)prijzen voor het onderwijs of bedrijven. Sommige betaalmethodes worden voor 
 				deze actie niet geaccepteerd. Meer informatie vind je bij het afrekenen. Daarnaast gelden er mogelijk nog 
 				andere beperkingen. De volledige op deze actie van toepassing zijnde voorwaarden vind je hier. </p>
+		</section>
+		<nav></nav>
+		<section>
+			<p>Andere manieren om te shoppen: Zoek een Apple Store of andere winkel bij jou in de buurt. 
+				Of bel 0800 0200 570. Nederland Copyright © 2023 Apple Inc. Alle rechten voorbehouden.
+				Privacybeleid Gebruik van cookies Gebruiksvoorwaarden Verkoopvoorwaarden Juridische informatie Site-overzicht</p>
 		</section>
 	</footer>
 
