--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="icon" type="image/svg+xml" href="images/apple-logo-transparent.png">
 </head>
 
+
 <body>
 	<header>
 			<nav>
@@ -20,7 +21,8 @@
 				</h1>
 					<button aria-hidden="false"><img src="images/search-svgrepo-com.svg" alt="zoek icoon"></button>
 					<button aria-hidden="false"><img src="images/shopping-bag-svgrepo-com.svg" alt="winkelmand"></button>
-					<button aria-hidden="true"><img src="images/hamburger-menu-svgrepo-com.svg" alt=""></button>
+					<button aria-hidden="true" onclick="toonMenu"><img src="images/hamburger-menu-svgrepo-com.svg" alt=""></button>
+					<button><img src="images/cross-small-svgrepo-com.svg" alt=""></button>
 					<ul>
 						<li>
 							<a href="">Store</a>
@@ -61,14 +63,14 @@
 	<main>
 		<section class="section1">
 			<a href=""><img src="images/apple-Iphone-15-pro.png" alt="Apple Iphone 15 pro"><button>Hello</button></a>
-			<a href=""><img src="images/Iphone-15.png" alt="Iphone 15"></a>	
 			<a href=""><img src="images/Watch-V2.png" alt="Apple watch series 9"></a>
+			<a href=""><img src="images/Iphone-15.png" alt="Iphone 15"></a>	
 			<a href=""><img src="images/Apple-Store.png" alt="Het apple store shopping event"></a>
 			<a href=""><img src="images/Apple-Cadeau.png" alt="Apple cadeau pagina"></a>
 			<a href=""><img src="images/MacBookPro.png" alt="Mac book pro"></a>
-			<a href=""><img src="images/Apple-Ipad.png" alt=""></a>
-			<a href=""><img src="images/Apple-Watch-2.png" alt=""></a>
-			<a href=""><img src="images/Trade-In.png" alt=""></a>
+			<a href=""><img src="images/Apple-Ipad.png" alt="Apple Ipad"></a>
+			<a href=""><img src="images/Apple-Watch-2.png" alt="Apple watch 2"></a>
+			<a href=""><img src="images/Trade-In.png" alt="Trade in Apple"></a>
 		</section>
 
 		<section id="fotoSliderAuto" class="fotoSlider">
